--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.9.34",
     "@amcharts/amcharts4-geodata": "^4.1.16",
-    "json-stable-stringify": "^1.0.1"
+    "json-stable-stringify": "^1.0.1",
+    "xlsx": "^0.17.0"
   }
 }
